<resources>
    <string name="app_name">AtarrayaGo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pasarpantalla">Pasar Pantalla</string>
    <string name="login">INICIE SESION</string>
    <string name="imagen_de_login">imagen de login</string>
    <string name="nombreUsuario">Usuario</string>
    <string name="password">Contaseña</string>
    <string name="btn_iniciarSesion">Iniciar Sesión</string>
    <string name="title_activity_menu_navegacion">menuNavegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>
    <string name="config">Configuraciones</string>
    <string name="menu_home">Bienvenido/a</string>
    <string name="clases">Aula Virtual</string>
    <string name="calendario">Programador de Actividades</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notas">Calificaciones</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="descripcion">imagendepresentacion</string>
    <string name="menu">Menú</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="mensajes">Mensajes</string>
    <string name="perfil">Mi Perfil</string>
    <string name="aula">CLASES 2020</string>
    <string name="salir">Salir</string>
    <string name="avisomenu">Seleccione la fecha para ver los platillos disponibles</string>
    <string name="mensaje_btnfecha">Elegir</string>
    <string name="nombreLiceo">Liceo Evangélico \n\"La Atarraya\"</string>
    <string name="logo_atarraya">logo_atarraya</string>
    <string name="slogan">Con Fe y Educación forjas tu destino</string>
    <string name="numUsuarioet">Número de Usuario</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="mantener_sesi_n_iniciada">Mantener Sesión Iniciada</string>
    <string name="txtView_informacion">Seleccione una fecha presionando el botón azul, y luego consulte el menú con el botón verde</string>
    <string name="edtext_datein">Seleccione una fecha</string>
    <string name="btn_consultarmenu">Consultar Menú</string>
    <string name="mensajePregunta">¿Desea salir de la aplicación?</string>
    <string name="tituloMensajeSalida">Cerrar Aplicación</string>
    <string name="opcionSi">Sí</string>
    <string name="opcionNo">No</string>
    <string name="rol">Seleccione su rol</string>
    <string name="info_ini">MODIFICAR LUEGO</string>
    <string name="bienvenido">Bienvenido:</string>
    <string name="versiculomaestros">Yo te enseñaré\n\Y te instruiré en el camino que debes seguir;\n\Seré tu consejero y\n\Estarán mis ojos sobre ti.</string>
    <string name="platillos_disponibles">Platillos disponibles</string>
    <string name="boton_menu">Consultar menú</string>
    <string name="boton_DPmenú">ICONO COMIDA</string>
    <string name="fecha">Fecha que desea consultar</string>
    <string name="opcion_clases">Clases</string>
    <string name="descripcion_opcion_clases">Administrador de contenidos</string>
    <string name="opcion_reportes">Reportes</string>
    <string name="descripcion_opcion_reportes">Administrador de reportes</string>
    <string name="opcion_asistencia">Asistencia</string>
    <string name="descripcion_opcion_asistencia">Administrador de Asistencia</string>
    <string name="opcion_trabajo_Docente">Trabajo Docente</string>
    <string name="descripcion_trabajo_docente">Planificación docente</string>
    <string name="opcion_prestamoEquipo">Préstamo de Equipo</string>
    <string name="descripcion_prestamoEquipo">Reservar equipo</string>
    <string name="aula_virtual_alumno">Aula Virtual</string>
    <string name="indicacionescalendario">Esta opción está creada para gestionar de una mejor manera los eventos y actividades que se desean programar, para hacerlo únicamente deberá presionar sobre la fecha en la cual desea trabajar, luego de ellos aparecerán tres opciones para poder gestionar el contenido.</string>
    <string name="indicaciones_reserva">A continuación deberá completar los siguientes campos para realizar una reserva de equipo</string>
    <string name="indicaciones_crearAviso">Por favor completar todos los campos para realizar un nuevo aviso</string>
    <string name="aula_virtual">Aula Virtual</string>
    <string name="line">___________________________________________________</string>
    <string name="seleccion_materia">Seleccione una materia para continuar</string>
    <string name="subject_alerts">Avisos Generales de la Materia</string>
    <string name="indicaciones_contenido">El contenido que añada acá, aparecerá en pestañas para el estudiante. Se sugiere que en esta parte añada las unidades de estudio, y para cada tema, añada secciones dentro de cada unidad</string>
    <string name="asignaturas">Asignaturas</string>
    <string name="grados_y_secciones">Grados y Secciones</string>
    <string name="editar">Editar</string>
    <string name="desactivar">Desactivar</string>
    <string name="drop">Eliminar</string>
    <string name="indicaciones_tareaspendientes">A continuación se encuentra una lista detallada de las tareas y actividades pendientes de su realización, le sugerimos tomar nota de las fechas acá mencionadas para realizar una entrega puntual de cada materia.</string>
    <string name="indicaciones_avSistema">A continuación se muestra una lista con los avisos colocados por los administradores del Sistema, le sugerimos ante cualquier duda consultar con su Maestro guía o directamente en el área de dirección.</string>
    <string name="boton_consultarMenu">Consultar menú</string>
    <string name="actualizar_perfil">Actualizar perfil</string>
    <string name="boton_subirnuevafoto">Subir Nueva Foto</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="correo_registrado">Correo Registrado</string>
    <string name="grado_actual">Grado Actual</string>
    <string name="contra_actual">Contraseña Actual</string>
    <string name="nueva_contra">Nueva Contraseña</string>
    <string name="confirmar_contra">Confirmar contraseña</string>
    <string name="actualizar_datos">Actualizar Datos</string>
    <string name="indicaciones_calendario">INDICACIONES</string>
    <string name="ingrese_el_nombre_del_evento">Ingrese el nombre del evento</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="hora_inicio">Hora Inicio</string>
    <string name="fecha_final">Fecha Final</string>
    <string name="hora_final">Hora Final</string>
    <string name="descrip_evento">Descripción del evento</string>
    <string name="guardar_evento">Guardar Evento</string>
    <string name="cancelar_evento">Cancelar Evento</string>
    <string name="nombre_del_maestro">Nombre del Maestro</string>
    <string name="titulo_contenidosmaestro">CONTENIDOS</string>
    <string name="seleccionarmateria_contmaestros">Seleccione una materia:</string>
    <string name="boton_agregar_contenido">AGREGAR CONTENIDO</string>
    <string name="eliminar_contenidomaestro">ELIMINAR CONTENIDO</string>
    <string name="subir_modificar_contenido">SUBIR / MODIFICAR CONTENIDO</string>
    <string name="titulocontenido_maestro">Título del Contenido:</string>
    <string name="nombrecontenido">Escriba el nombre aquí</string>
    <string name="visibilidad_contenido">Visibilidad</string>
    <string name="contvisible">VISIBLE (Pueden verlo)</string>
    <string name="contoculto">OCULTO</string>
    <string name="seleccione_contenido">Seleccione Contenido</string>
    <string name="botonsubir_contenido">Subir Contenido</string>
    <string name="spinnerseleccione_la_materia">Seleccione la Materia</string>
    <string name="botonguardar_contenido">GUARDAR Contenido</string>
    <string name="eliminar_contenido">ELIMINAR CONTENIDO</string>
    <string name="contenido_cargado">Contenido cargado</string>
    <string name="archivosubido_pdf">Archivosubido.pdf</string>
    <string name="materia_seleccionada">Materia seleccionada</string>
    <string name="administrador_de_pruebas">Administrador de Pruebas</string>
    <string name="periodo">Seleccione período</string>
    <string name="ponderacion">Seleccione una Ponderación</string>
    <string name="pruebasponderacion">Pruebas para esta Ponderación</string>
    <string name="nueva_prueba">Nueva Prueba</string>
    <string name="crear_nueva_prueba">Crear Nueva Prueba</string>
    <string name="indicaciones_pruebas">Tome en cuenta: Si añade una respuesta de tipo "Texto Corto" o "Texto Largo" a la prueba, la calificación automática se deshabilitará, ya que no se puede calificar automáticamente una respuesta libre</string>
    <string name="nombre_de_la_prueba">Nombre de la Prueba</string>
    <string name="descprueba">Descripción de la prueba</string>
    <string name="porcentaje_de_la_prueba">Porcentaje de la Prueba</string>
    <string name="inicioprueba">Fecha de Inicio de la prueba</string>
    <string name="finalizacionprueba">Fecha Finalización Prueba</string>
    <string name="duracionprueba">Duración de la prueba</string>
    <string name="duracionprueba_min">Duración prueba (Minutos)</string>
    <string name="checkbox_pruebavisible">Esta prueba es visible para los estudiantes</string>
    <string name="checkbox_calificarautomatico">Esta prueba se calificará automáticamente</string>
    <string name="guardar_prueba">Guardar Prueba</string>
    <string name="adminActividades">Administrador de Actividades</string>
    <string name="nueva_actividad">NUEVA ACTIVIDAD</string>
    <string name="actividadesponderacion">Actividades para esta ponderación</string>
    <string name="crear_nueva_actividad">Crear Nueva Tarea</string>
    <string name="nombre_de_la_tarea">Nombre de la tarea</string>
    <string name="desctarea">Descripción de la tarea</string>
    <string name="porcentaje_de_la_tarea">Porcentaje de la tarea</string>
    <string name="iniciotarea">Fecha inicio de la tarea</string>
    <string name="finalizaciontarea">Fecha entrega final</string>
    <string name="seleccionar_archivos_tareas">Seleccionar Archivos</string>
    <string name="guardar_tarea">Guardar Tarea</string>
    <string name="avisos_por_materia">AVISOS POR MATERIA</string>
    <string name="crear_nuevo_aviso">Crear Nuevo Aviso</string>
    <string name="seleccione_una_materia">Seleccione una materia :</string>
    <string name="avisos_registrados">AVISOS REGISTRADOS:</string>
    <string name="creador_de_avisos">CREADOR DE AVISOS</string>
    <string name="titulo_del_aviso">Título del Aviso:</string>
    <string name="escriba_aqu">Escriba aquí</string>
    <string name="contenido">CONTENIDO</string>
    <string name="mensaje">MENSAJE :</string>
    <string name="estado_del_aviso">Estado del Aviso</string>
    <string name="avisoactivado">Activado</string>
    <string name="avisodesactivado">Desactivado</string>
    <string name="guardar_aviso">GUARDAR AVISO</string>
    <string name="btncancelar">CANCELAR AVISO</string>
</resources>