<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_inicio"
            android:title="@string/menu_home" />
    </group>
  <item android:title="">
      <menu>
      <item
            android:id="@+id/clases"
            android:icon="@drawable/ic_clases"
            android:title="@string/clases" />
        <item
            android:id="@+id/calendario"
            android:icon="@drawable/ic_calendario"
            android:title="@string/calendario" />
        <item
            android:id="@+id/action_nav_home_to_notas"
            android:icon="@drawable/ic_notas"
            android:title="@string/notas" />
      </menu>
  </item>
    <item android:title=""><menu>
        <item
            android:id="@+id/configuracion"
            android:icon="@drawable/ic_settings"
            android:title="@string/config" />
    </menu></item>
</menu>