<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.crearnuevaprueba_maestro">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="674dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_crearprueba"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/crear_nueva_prueba"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/atarraya" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_indicacionesPruebas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/indicaciones_pruebas"
                    android:textColor="@color/oscuro"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_nombreprueba"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_de_la_prueba"/>

                <EditText
                    android:id="@+id/edt_descripcionprueba"
                    android:layout_width="match_parent"
                    android:layout_height="215dp"
                    android:ems="40"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:padding="5dp"
                    android:background="@drawable/border"
                    android:hint="@string/descprueba"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/edt_porcentajeprueba"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/porcentaje_de_la_prueba"/>

                <EditText
                    android:id="@+id/edt_fechainicioprueba"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inicioprueba"/>

                <EditText
                    android:id="@+id/edt_fechafinalizacionprueba"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/finalizacionprueba"/>
                <EditText
                    android:id="@+id/edt_duracionprueba"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/duracionprueba_min"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/cbx_pruebavisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_pruebavisible" />
                <CheckBox
                    android:id="@+id/cbx_calificarautomatico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_calificarautomatico"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="25dp">
                    <Button
                        android:id="@+id/btn_guardarPrueba"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/guardar_prueba"
                        android:textColor="@color/blanco"
                        android:textStyle="bold"
                        android:background="#157A19"
                        android:padding="15dp" />
                </LinearLayout>
            </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>