<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.liceoatarraya.app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/clases" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/calendario" />
        <action
            android:id="@+id/action_nav_home_to_notas"
            app:destination="@id/notas" />
        <action
            android:id="@+id/action_nav_home_to_configuracion"
            app:destination="@id/configuracion" />
    </fragment>

    <fragment
        android:id="@+id/clases"
        android:name="com.liceoatarraya.app.ui.gallery.GalleryFragment"
        android:label="@string/clases"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/calendario"
        android:name="com.liceoatarraya.app.ui.slideshow.SlideshowFragment"
        android:label="@string/calendario"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/notas"
        android:name="com.liceoatarraya.app.notas"
        android:label="fragment_notas"
        tools:layout="@layout/fragment_notas" />
    <fragment
        android:id="@+id/configuracion"
        android:name="com.liceoatarraya.app.SettingsFragment"
        android:label="@string/config" />
</navigation>