<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.crearAviso_maestro">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="674dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_crearaviso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/creador_de_avisos"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/atarraya" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_indicacionesAviso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/indicaciones_crearAviso"
                android:textColor="@color/oscuro"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_del_aviso"
                android:textColor="@color/oscuro"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tv_nombreaviso"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/escriba_aqu"
                android:maxLength="50"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/contenido"
                android:textColor="@color/oscuro"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/atarraya" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/mensaje"
                android:textColor="@color/oscuro"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_mensajeaviso"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:ems="40"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:background="@drawable/border"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/estado_del_aviso"
                android:textColor="@color/oscuro"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rgp_estadoaviso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtn_opcActivado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avisoactivado" />

                <RadioButton
                    android:id="@+id/rbtn_opcDesactivado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/avisodesactivado" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_guardaraviso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar_aviso"
                android:background="@drawable/rounded_edittext_focused"
                android:backgroundTint="@color/atarraya"
                android:padding="5dp"
                android:textColor="@color/blanco"/>
            <Button
                android:id="@+id/btn_cancelaraviso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btncancelar"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:background="@drawable/rounded_edittext_focused"
                android:backgroundTint="@color/pink"
                android:textColor="@color/blanco"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>