<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.crearnuevaactividad_maestro">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="674dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_crearactividad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/crear_nueva_actividad"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/atarraya" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_nombretarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_de_la_tarea"/>

                <EditText
                    android:id="@+id/edt_descripciontarea"
                    android:layout_width="match_parent"
                    android:layout_height="215dp"
                    android:ems="40"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:padding="5dp"
                    android:background="@drawable/border"
                    android:hint="@string/desctarea"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/edt_porcentajetarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/porcentaje_de_la_tarea"/>

                <EditText
                    android:id="@+id/edt_fechainiciotarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/iniciotarea"/>

                <EditText
                    android:id="@+id/edt_fechafinalizaciontarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/finalizaciontarea"/>
                <Button
                    android:id="@+id/btn_subirarchivotarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seleccionar_archivos_tareas"
                    android:drawableStart="@android:drawable/ic_menu_upload_you_tube"
                    android:background="#858585"
                    android:textColor="@color/blanco"
                    android:padding="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/cbx_tareavisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_pruebavisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_guardartarea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="#157A19"
                    android:padding="15dp"
                    android:text="@string/guardar_tarea"
                    android:textColor="@color/blanco"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>